[package]
name = "monochora"
version = "0.1.5"
edition = "2024"
description = "gif to ascii art converter written in rust"
license = "MIT"

[dependencies]
gif = "0.12.0"
image = "0.24.6"
imageproc = "0.23.0"  
rusttype = "0.9.3"    
clap = { version = "4.3.0", features = ["derive"] }
crossterm = "0.26.1"
anyhow = "1.0.71"
tokio = { version = "1.28.2", features = ["full"] }
reqwest = { version = "0.11", features = ["stream"] }
url = "2.4"
tempfile = "3.8"
rayon = "1.10"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
thiserror = "1.0"
regex = "1.11.1"

[lib]
name = "monochora"
path = "src/lib.rs"

[[bin]]
name = "monochora"
path = "src/main.rs"
